Bug fix on small screen scroll hamburger

--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -87,7 +87,7 @@
     
     
     .scrolled {
-        display: block;
+        display: flex;
     }
 
     .nav ul {
